Bug61693 : JMeter aware of Docker
git-svn-id: https://svn.apache.org/repos/asf/jmeter/trunk@1813712 13f79535-47bb-0310-9956-ffa450edef68